# kr-domains

./: .gitignore  LICENSE  README.md  corpus.py  corpus_test.py  pixi.toml  pyproject.toml
.github/workflows/: check.yml
encodings/equality-generalized-tsp/: egtsp-clingcon.lp  egtsp.lp
encodings/n-queens/: variant-01.lp  variant-02.lp  variant-03.lp  variant-04.lp  variant-05.lp  variant-07-clingcon.lp
encodings/send-money/: send-money-clingcon.lp  send-money.lp
encodings/shortest-path/: variant-01.lp  variant-02.lp  variant-03-clingcon.lp  variant-03.lp  variant-04-clingcon.lp  variant-04.lp
encodings/task-allocation/: variant-01.lp  variant-02.lp  variant-03.lp  variant-04-clingcon.lp  variant-04.lp
encodings/task-scheduling/: task-scheduling-clingcon.lp
encodings/traveling-salesman/: variant-01.lp  variant-02.lp  variant-03.lp  variant-04-clingcon.lp  variant-04.lp  variant-05-clingcon.lp  variant-05.lp
scenarios/equality-generalized-tsp/: 01-basic-clingcon.lp  01-basic.lp  02-larger-clingcon.lp  02-larger.lp  03-unreachable-subset-unsat-clingcon.lp  03-unreachable-subset-unsat.lp
scenarios/shortest-path/variant-01/: 01-basic.lp  02-start-equals-end.lp  03-zero-cost-detour.lp  04-no-path.lp  05-multi-path.lp  06-layered-dag.lp  07-cycles.lp
scenarios/shortest-path/variant-02/: 01-basic.lp  02-start-equals-end.lp  03-before-forces-detour.lp  04-after-forces-extension.lp  05-ordering-unsat.lp  06-layered-dag-before.lp  07-layered-dag-before-after.lp
scenarios/shortest-path/variant-03/: 01-basic-clingcon.lp  01-basic.lp  (+12 more)
standalone/n-queens/: variant-02.lp  variant-03.lp  variant-06.lp
standalone/send-money/: send-money-clingcon.lp  send-money.lp
standalone/task-scheduling/: task-scheduling-clingcon.lp
(+74 files in other folders)
