# kr-domains test harness — tool config only. kr-domains is a corpus plus a thin pytest client, not
# a distributable package, so there is no [build-system]/[project]. The bar mirrors elenctic's:
# ruff (format + lint), mypy --strict, pytest.

[tool.ruff]
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]  # arrows / set notation in docstrings describing elenctic

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --strict-markers --strict-config"
pythonpath = ["."]                 # so corpus_test.py can import the sibling corpus module
testpaths = ["corpus_test.py"]
python_files = ["corpus_test.py"]

[tool.mypy]
strict = true
warn_unreachable = true
strict_equality = true
files = ["corpus.py", "corpus_test.py"]

[[tool.mypy.overrides]]
# clingo/clingcon ship no type stubs (reached transitively through elenctic).
module = ["clingo", "clingo.*", "clingcon", "clingcon.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# elenctic ships no py.typed marker as installed, and its curated __init__ re-exports the public API
# lazily (a computed __all__ + a TYPE_CHECKING block) rather than via static re-exports — two frozen-
# library packaging gaps, noted for a future elenctic pass. So for elenctic specifically: follow its
# installed source (keep the real types, not Any) and accept its implicit re-exports (so the intended
# `from elenctic import …` public surface type-checks). Strictness is unrelaxed for the harness itself.
module = ["elenctic", "elenctic.*"]
follow_untyped_imports = true
implicit_reexport = true
